# causelang

./: README.md  cause.code-workspace  package-lock.json
codegen/: deno.jsonc  deps.ts  generate.ts
future-examples/cheat/: cards.cau  deck.cau  game.cau
future-examples/counter/: counter.cau  counter_with_recursion.cau  counter_with_slot_recursion.cau
future-examples/crawler/: crawler.cau  crawler01.cau  crawler02.cau
future-examples/diceRps/: diceRps.cau
future-examples/generators/: generators.cau
future-examples/reactiveUi/: app.cau  appWithMacros.cau  appWithSugar.cau  reactiveCore.cau
future_examples/cheat/: cards.cau  deck.cau  game.cau
future_examples/crawler/: crawler01.cau  (+1 more)
ktcause/: .gitignore  ast.txt  build.gradle.kts  external_files.txt  settings.gradle.kts  tags.txt
proto_compiler/: package-lock.json  package.json  tsconfig.json
rs-typeproto/: Cargo.toml
rs-typeproto/src/: analyzer.rs  analyzer_old.rs  ast.rs  breadcrumb_walk.rs  cause.pest  compiled_file.rs  compiler.rs  core_builtin.rs  core_descriptors.rs  core_globals.rs  core_runtime.rs  instructions.rs  lib.rs  parse.rs  resolver.rs  types.rs  vm.rs
rs-typeproto/tests/: basic_ast.rs  current_test.rs  error_handling_basic.rs  hello_world.rs  io.rs
rs-typeproto/tests/common/: mod.rs
rscause/: Cargo.toml  expected.txt
rscause/rscause_compiler/: Cargo.toml
rscause/rscause_compiler/src/: ast.rs  breadcrumbs.rs  compile.rs  compiled_file.rs  error_types.rs  instructions.rs  lang_types.rs  lib.rs  resolve_types.rs  tags.rs
rscause/rscause_compiler/tests/: functions_in_scope.rs  hello_world.rs  tmp.rs
rscause/rscause_compiler/tests/fixtures/functions_in_scope/: ast.txt  external_files.txt  tags.txt
rscause/rscause_compiler/tests/fixtures/hello_world/: ast.txt  canonical_types.txt  external_files.txt  tags.txt
rscause/rscause_compiler/tests/fixtures/tmp/: ast.txt  canonical_types.txt  external_files.txt  tags.txt
rscause/rscause_jni/: Cargo.toml
rscause/rscause_jni/src/: lib.rs  util.rs
rscause/rscause_jni/src/mapping/: ast.rs  breadcrumbs.rs  compiled_file.rs  compiler_misc.rs  error_types.rs  instructions.rs  lang_types.rs  mod.rs  tags.rs
(+96 files in other folders)
