[package]
name = "cause_typeproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vm_play_by_play = []

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0.140", features = ["derive"] }