[package]
name = "rscause_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tap = "1.0.1"
thiserror = "1.0.48"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-lexpr = "0.1.3"
rust_decimal = { version = "1.33", features = ["serde-str"] }
num = "0.4.1"

[dev-dependencies]
serde-lexpr = "0.1.3"
