[package]
name = "rscause_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
jni = "0.21.1"
rscause_compiler = { path = "../rscause_compiler" }
