[package]
name = "rscause_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
jni = "0.21.1"
rscause_compiler = { path = "../rscause_compiler" }
tap = "1.0.1"
serde-lexpr = "0.1.3"
rust_decimal = { version = "1.33", features = ["serde-str"] }
num = "0.4.1"